src/postgres/third-party-extensions/pgrx/pgrx-tests/tests/compile-fail/invalid_pgcast_options.rs
use pgrx::prelude::*;

#[pg_cast(invalid_opt)]
pub fn cast_function(foo: i32) -> i32 {
    foo
}

fn main() {}
